--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.data.jdbc.dialect=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.javax.persistence.validation.mode=none
