addCorsMappings for frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql: true
 spring.data.jdbc.dialect=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.javax.persistence.validation.mode=none
+FRONTEND_API=http://localhost:5173/
